--- a/build.gradle
+++ b/build.gradle
@@ -1,23 +1,24 @@
 buildscript {
     ext.kotlin_version = '1.3.40'
-    ext.dokka_version = '0.9.17'
+    ext.dokka_version = '0.10.0'
     repositories {
         jcenter()
         google()
         maven {
             url "http://oss.sonatype.org/content/repositories/snapshots/"
         }
+
     }
     dependencies {
         classpath 'com.vanniktech:gradle-maven-publish-plugin:0.9.0-SNAPSHOT'
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_version"
     }
 }
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "1.0.0-RC12"
+    id 'org.jetbrains.dokka' version '0.10.0'
 }
 
 allprojects {
@@ -40,4 +41,3 @@ subprojects {
 wrapper {
     gradleVersion = '5.1.1'
 }
-
